[package]
name = "arb_data"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "arb_data"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rocket = {version = "0.5.0-rc.2", features = ["json"]}
thiserror = "1.0"
serde_json = "1.0"
dotenv = "0.15.0"
